Update main.yml to remove limits and filter for wireguard

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,12 @@ jobs:
 
       - name: Download server lists and update list files
         run: |
-          mkdir -p generic
-          mkdir -p foxyproxy
+          mkdir -p lists
           declare -a countrycode=("au" "ca" "fr" "de" "hk" "in" "jp" "nl" "sg" "se" "ch" "tw" "uk" "us")
           declare -a countryid=("13" "38" "74" "81" "97" "100" "108" "153" "195" "208" "209" "211" "227" "228")
           for (( i=0; i<${#countrycode[@]}; i++ ));
           do
-            curl --silent "https://api.nordvpn.com/v1/servers/recommendations?filters\[country_id\]=${countryid[$i]}&filters\[servers_technologies\]\[identifier\]=proxy_ssl&limit=100" | jq --raw-output '.[].hostname' > generic/${countrycode[$i]}.txt
-            cat generic/${countrycode[$i]}.txt | while read line; do echo "ssl://username:password@${line}:89" >> foxyproxy/${countrycode[$i]}.txt; done
+            curl --silent "https://api.nordvpn.com/v1/servers/recommendations?filters\[country_id\]=${countryid[$i]}&filters\[servers_technologies\]\[identifier\]=wireguard_udp" | jq --raw-output '.[].hostname' > generic/${countrycode[$i]}.txt
           done
 
       - name: Commit and push changes
